--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <script>
     // Change this URL to your target link
-    const targetURL = "https://continue-to-the-information.surge.sh/";
+    const targetURL = "https://rebrand.ly/Continue-to-the-Information-Center";
 
     // Wait 4 seconds before redirecting
     setTimeout(() => {
